tests/ui/recursion/recursive-impl-trait-iterator-by-ref-67552.stderr
error: reached the recursion limit while instantiating `rec::<&mut &mut &mut &mut &mut &mut &mut &mut ...>`
  --> $DIR/recursive-impl-trait-iterator-by-ref-67552.rs:28:9
   |
LL |         rec(identity(&mut it))
   |         ^^^^^^^^^^^^^^^^^^^^^^
   |
note: `rec` defined here
  --> $DIR/recursive-impl-trait-iterator-by-ref-67552.rs:21:1
   |
LL | / fn rec<T>(mut it: T)
LL | | where
LL | |     T: Iterator,
   | |________________^
   = note: the full name for the type has been written to '$TEST_BUILD_DIR/recursive-impl-trait-iterator-by-ref-67552.long-type-$LONG_TYPE_HASH.txt'
   = note: consider using `--verbose` to print the full type name to the console

error: aborting due to 1 previous error

